# Mastermind

./: .firebaserc  Cargo.toml  LICENSE  README.md  devguide.md  firebase.json  index.html  load_env.sh  out.txt  package.json  reference.md  runningMastermind.md  tsconfig.json
compiler/: Cargo.toml
compiler/programs/: brainfuck.2d.bf  brainfuck.min.2d.bf  brainfuck.mmi  brainfuck_2_stub.mmi  chritmas_trees.mmi  day_of_the_week.mmi  divisors.mmi  divisors_example.mmi  ifp16calculator.bf  prime_1_to_100.mmi  print.mmi  test.mmi
compiler/programs/std/: bitops  fp32  i8  ifp16  u16  u8
compiler/programs/stubs/: f16
compiler/src/: backend.rs  brainfuck.rs  brainfuck_optimiser.rs  builder.rs  cells.rs  compiler.rs  constants_optimiser.rs  frontend.rs  lib.rs  macros.rs  main.rs  mastermind_optimiser.rs  misc.rs  optimiser.rs  parser.rs  preprocessor.rs  tests.rs  tokeniser.rs
compiler/src/backend/: bf.rs  bf2d.rs  common.rs  constants_optimiser.rs  mod.rs
compiler/src/backend/optimiser/: bf.rs  bf2d.rs  mod.rs  tests.rs
compiler/src/frontend/: frontend.rs  mod.rs  types.rs
compiler/src/parser/: expressions.rs  mod.rs  old_parser.rs  old_tokeniser.rs  parser.rs  tests.rs  tokeniser.rs  tokens.rs  types.rs
docs/: brainfuck.md  cells.md  conditionals.md  functions.md  inlinebrainfuck.md  intro.md  io.md  locationspecifiers.md  loops.md  optimisations.md  standardlib.md  structs.md  temp.md  twodimensional.md  variables.md  variants.md
programs/: add.bfi  divisors.mmi  fibonacci.mmi  notes.bfi  output.bf  strlen.bf  test.mmi
src/: App.css  App.tsx  brainfuck.rs  brainlove.rs  builder.rs  main.rs  (+11 more)
(+49 files in other folders)
