[package]
name = "mastermind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.67"
regex = "1.10.2"
serde = {version = "1.0.193", features = ["derive"]}
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.40"

[features]
default = ["console_error_panic_hook"]
