[package]
name = "mastermind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.67"
regex-lite = "0.1.5"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.40"

[dev-dependencies]
twiggy = "0.7.0"
wasm-bindgen-test = "0.3.40"

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

# needed for twiggy to not freak out when profiling wasm
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-Os']
